<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/yourCPC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/current_cpc"
                android:textColor="@color/main_text_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yourCum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/current_cum"
                android:textAlignment="textEnd"
                android:textColor="@color/main_text_color"
                android:textSize="20sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/text_cps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cps"
                android:textAlignment="textStart"
                android:textColor="@color/main_text_color"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yourCPC"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="188dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/btn_cumClick"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?selectableItemBackgroundBorderless">
        <View
            android:id="@+id/view_cumBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_form"/>
        <ImageView
            android:id="@+id/img_cum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_drops_water"
            android:contentDescription="@string/cum_img"
            android:layout_margin="48dp"
            app:tint="@color/icon_tint"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>